operator/pkg/gateway-api/testdata/gateway/httproute-identical-rule-invalid-backend/input/httproute-identical-rule-invalid-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: identical-rule-invalid-backend
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: Exact
        value: /same
    backendRefs:
    - name: nonexistent
      port: 8080
  - matches:
    - path:
        type: Exact
        value: /same
    backendRefs:
    - name: infra-backend-v2
      port: 8080
